--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -1,6 +1,7 @@
 <section class="page-header">
   <h1 class="project-name">{{ site.title }}</h1>
   <h2 class="project-tagline">{{ site.tagline }}</h2>
-  <a href="#" class="btn">Setup Guide</a>
+  <a href="{{ site.links.setup }}" class="btn">Setup Guide</a>
+  <a href="{{ site.links.documentation }}" class="btn">Documentation</a>
   <a href="{{ site.links.github }}" class="btn">View on GitHub</a>
 </section>
