First published version

--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -2,6 +2,6 @@
   <h1 class="project-name">{{ site.title }}</h1>
   <h2 class="project-tagline">{{ site.tagline }}</h2>
   <a href="{{ site.links.setup }}" class="btn">Setup Guide</a>
-  <a href="{{ site.links.documentation }}" class="btn">Documentation</a>
+  <a href="{{ site.links.doc }}" class="btn">Documentation</a>
   <a href="{{ site.links.github }}" class="btn">View on GitHub</a>
 </section>
